--- a/lang/en.yaml
+++ b/lang/en.yaml
@@ -1,4 +1,32 @@
 name: English
-code: en
+code: en-us
 strings:
-    title: title
+    search: Search
+    collection: Collection
+    folders: Folders
+    settings: Settings
+    language: Language
+    cancel: Cancel
+    clear: Clear
+    add_folder: Add folder
+    source_folders: Sources
+    search_results: Search results
+    about_this_app: About
+    return_to_source_folder: Return to source folder
+    thumb_cache: Cache
+    license: License
+    website: Website
+    feedback: Feedback
+    message:
+        empty_folder: No pictures or folders.
+        empty_collection: No pictures.
+        empty_tags: No tags.
+        empty_search_results: No results found.
+        sync_resources: Sync resources
+    description:
+        thumb_cache: >
+            This application will automatically cache the thumbnail
+            when you browse the list of pictures, so that you can quickly
+            render thumbnail images in the next time you browse the pictures.
+        change_language_setting: Change language
+        copyright: © 2016 LC's Software，All rights reserved.
