更新下拉菜单，为文件夹视图添加排序方式选择功能

--- a/lang/en.yaml
+++ b/lang/en.yaml
@@ -4,6 +4,14 @@ strings:
     button:
         cancel: Cancel
         clear: Clear
+    sort:
+        header: Sort options
+        ctime_desc: Recentyy created
+        ctime_asc: Least recently created
+        mtime_desc: Recently updated
+        mtime_asc: Least recently updated
+        score_desc: Most score
+        score_asc: Fewest score
     home:
         title: Collection
         message:
