--- a/lang/zh-tw.yaml
+++ b/lang/zh-tw.yaml
@@ -2,8 +2,11 @@ name: 繁體中文
 code: zh-tw
 strings:
     button:
+        ok: 確定
         cancel: 取消
+        search: 搜索
         clear: 清除
+        cleaning: 正在清除...
     sort:
         header: 排序方式
         ctime_desc: 最近創建
@@ -23,6 +26,8 @@ strings:
             empty: 未找到可讀取的圖片或文件夾
     search:
         title: 搜索
+        placeholder:
+            search_input: 根據標籤搜索圖片，多個標籤用空格隔開
         results: 
             title: 搜索結果
         message:
@@ -80,7 +85,11 @@ strings:
         license: 許可協議
         website: 官方網站
         feedback: 問題反饋
-        add_folder: 添加文件夾
-        source_folders: 源
+        source_folders:
+            title: 源
+            add_folder: 添加文件夾
+            removing_dialog:
+                title: 確定要移除該源文件夾？
+                content: 一旦移除後，該源文件夾內的文件相關信息將一同被移除。
         about: 關於此應用
         copyright: © 2016 LC's Software，保留所有權利。
