--- a/lang/zh-tw.yaml
+++ b/lang/zh-tw.yaml
@@ -42,10 +42,12 @@ strings:
             saving: '正同步 %d/%d 個文件'
             finished: '已同步 %d 個文件'
     picture:
+        browse_all: 瀏覽全部圖片
         message:
             empty: 此處沒有任何要顯示的內容。
             loading: 圖片載入中...
             unsupport: 無法識別該圖片的內容。
+        unknown: 未知
         info:
             title: 文件信息
             file_name: 文件名
