调整界面样式，在“设置”视图中补充“源代码”链接

--- a/app/locales/en-us.yaml
+++ b/app/locales/en-us.yaml
@@ -96,6 +96,7 @@ strings:
         license: License
         website: Website
         feedback: Feedback
+        sourcecode: Source code
         source_folders:
             title: Sources
             add_folder: Add folder
