更新图片查看器，添加图片载入进度条显示 #39

--- a/app/locales/en-us.yaml
+++ b/app/locales/en-us.yaml
@@ -86,6 +86,7 @@ strings:
         dialog:
             title:
                 delete: Delete files
+                confirm_delete: Delete this file?
                 add_tags: Add tags
                 deleting: Deleting ...
                 adding_tags: Adding tags ...
