为密码输入框补充占位符

--- a/app/locales/en-us.yaml
+++ b/app/locales/en-us.yaml
@@ -11,6 +11,10 @@ strings:
     switch:
         on: On
         off: Off
+    dialog:
+        placeholder:
+            password: Password
+            confirm_password: Confirm password
     sort:
         header: Sort options
         ctime_desc: Recently created
