--- a/app/locales/zh-tw.yaml
+++ b/app/locales/zh-tw.yaml
@@ -11,6 +11,10 @@ strings:
     switch:
         on: 開
         off: 關
+    dialog:
+        placeholder:
+            password: 密碼
+            confirm_password: 確認密碼
     sort:
         header: 排序方式
         ctime_desc: 最近創建
