--- a/app/locales/en-us.yaml
+++ b/app/locales/en-us.yaml
@@ -28,8 +28,34 @@ strings:
         password_too_long: Password is too long
         password_empty: Password can not be empty
         passwords_not_match: Passwords not match
+    datetime:
+        format: 'DATE MM DD, YYYY hh:mm'
+        year_format: MM YYYY
+        month_format: DD MM
+        days:
+            0: Monday
+            1: Tuesday
+            2: Wednesday
+            3: Thursday
+            4: Friday
+            5: Saturday
+            6: Sunday
+        months:
+            0: January
+            1: February
+            2: March
+            3: April
+            4: May
+            5: June
+            6: July
+            7: August
+            8: September
+            9:  October
+            10: November
+            11: December
     home:
         title: Collection
+        pictures_count_stats: ', %d pictures'
         message:
             empty: No pictures
     folders:
