--- a/app/locales/zh-tw.yaml
+++ b/app/locales/zh-tw.yaml
@@ -28,8 +28,34 @@ strings:
         password_too_long: 密碼太長
         password_empty: 密碼不能爲空
         passwords_not_match: 兩次輸入的密碼不一致
+    datetime:
+        format: YYYY年MM月DD日，DATE hh:mm
+        year_format: YYYY年MM月
+        month_format: MM月DD日
+        days:
+            0: 星期一
+            1: 星期二
+            2: 星期三
+            3: 星期三
+            4: 星期五
+            5: 星期六
+            6: 星期天
+        months:
+            0: 1
+            1: 2
+            2: 3
+            3: 4
+            4: 5
+            5: 6
+            6: 7
+            7: 8
+            8: 9
+            9: 10
+            10: 11
+            11: 12
     home:
         title: 集錦
+        pictures_count_stats: '%d張圖片'
         message:
             empty: 未找到可讀取的圖片
     folders:
