refactor: update tag thumb list

--- a/app/locales/en-us.yaml
+++ b/app/locales/en-us.yaml
@@ -18,6 +18,9 @@ strings:
         password:
             password: Password
             confirm_password: Confirm password
+    tagthumb:
+        item: '%S item'
+        items: '%S items'
     sort:
         header: Sort options
         ctime_desc: Recently created
