--- a/app/locales/zh-tw.yaml
+++ b/app/locales/zh-tw.yaml
@@ -18,6 +18,9 @@ strings:
         password:
             password: 密碼
             confirm_password: 確認密碼
+    tagthumb:
+        item: '%s 項'
+        items: '%s 項'
     sort:
         header: 排序方式
         ctime_desc: 最近創建
