--- a/app/locales/zh-cn.yaml
+++ b/app/locales/zh-cn.yaml
@@ -18,6 +18,9 @@ strings:
         password:
             password: 密码
             confirm_password: 确认密码
+    tagthumb:
+        item: '%S 项'
+        items: '%S 项'
     sort:
         header: 排序方式
         ctime_desc: 最近创建
